--- a/package.json
+++ b/package.json
@@ -2,15 +2,39 @@
   "name": "noteful-json-server",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "mocha --require test/setup.js",
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate",
+    "start": "node src/server.js",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master",
+    "postdeploy": "npm run migrate:production"
   },
-  "author": "Thomas `tomatao` Hudspith-Tatham <iammotivated@gmail.com>",
+  "keywords": [],
+  "engines": {
+    "node": "12.14.1"
+  },
+  "author": "Oscar Sanchez <architectsanchez13@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "faker": "^4.1.0",
-    "json-server": "^0.14.0"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.5.0",
+    "knex": "^0.95.4",
+    "morgan": "^1.10.0",
+    "pg": "^8.6.0",
+    "postgrator-cli": "^4.0.0",
+    "xss": "^1.0.8"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
